Fixed COVID page on mobile devices

--- a/cirillos/static/styles/covid.css
+++ b/cirillos/static/styles/covid.css
@@ -59,6 +59,6 @@ main {
 
 @media only screen and (max-width: 500px) {
 	.header h1 {
-		font-size: 200%;
+		font-size: 50%;
 	}
 }
